@@ -1,3 +1,9 @@
+2004-10-09  Mark Wielaard  <mark@klomp.org>
+
+	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGlyphVector.c
+	(setChars): Only call pango_itemize() when vec->glyphitems != NULL.
+	Only call pango_shape() when gi->glyphs->num_glyphs > 0.
+
 2004-10-09  Michael Koch  <konqueror@gmx.de>
 
 	* gnu/java/awt/peer/gtk/GtkToolkit.java:
